implement deploy script for paymaster

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-WALLET_PRIVATE_KEY=
+GreetingContract=0x5bb39E782bdba06C985218887ba67877b9C48D04
+Erc20Contract=0xd7a83bD1203EfFE92B42e53a59435a206E076bb5
+Paymaster=0x3818b14d3848b32bA30c1fc221eCb12a83d5609c
