--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "repository": "https://github.com/matter-labs/zksync-hardhat-template.git",
   "scripts": {
     "deploy": "hardhat deploy-zksync --script deploy.ts",
+    "deployErc20": "hardhat deploy-zksync --script deployErc20.ts",
+    "deployPaymaster": "hardhat deploy-zksync --script paymaster.ts",
     "interact": "hardhat deploy-zksync --script interact.ts",
     "compile": "hardhat compile",
     "clean": "hardhat clean",
